HighCopy/Stylesheets/css/main.css
body {
    margin: 0;
    padding: 0;
    min-height: 100%;
    /*width: 100%;*/
}

html {
    height: 100%;
}

.flex-col-container {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;

    position: relative;

}

.flex-row-container {

    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
}

.firebase_topbar {
    background-color: #0288D1;
    width: 100%;
    height: 48px;

    /*border-width: 0 0 3px 0;*/
    /*border-style: solid;*/
    /*-webkit-border-image:*/
    /*-webkit-gradient(linear, 0 0, 0 100%, from(#0288D1), to(rgba(0, 0, 0, 0))) 1 100%;*/
    /*-webkit-border-image:*/
    /*-webkit-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;*/
    /*-moz-border-image:*/
    /*-moz-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;*/
    /*-o-border-image:*/
    /*-o-linear-gradient(black, rgba(0, 0, 0, 0)) 1 100%;*/
    /*border-image:*/
    /*linear-gradient(to bottom, black, rgba(0, 0, 0, 0)) 1 100%;*/

}

.firebase_topbar_bottom_shadow {
    /*background-color: black;*/
    height: 5px;
    background: linear-gradient(to bottom, #03699b, #039be5);
}

.firebase_topbar_bottom_shadow_for_nav {
    height: 5px;
    background: linear-gradient(to bottom, #b6b6b6, #fafafa);
}

.firebase_topbar_topleft_logo {
    width: 142px;
    height: 48px;

    flex-direction: row;
    background: transparent;
    border: none;
    /*overflow: hidden;*/
    cursor: pointer;
    outline: none;

}

.logo_name {
    padding: 0px;
    margin-top: 12px;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 21px;
    margin-left: 9px;
    color: white;
    display: flex;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: 0.14px;
    font-weight: normal;

}

.logo_picture {
    width: 28px;
    height: 28px;
    margin-left: 14px;
    margin-top: 8px;
    top: -1px;
    text-align: center;

}

.firebase_left_nav {
    width: 253px;
    color: #757575;
    /*position: absolute;*/
    /*left: 0px;*/
    /*right: 0px;*/
    /*bottom: 0px;*/
    overflow-x: hidden;
    overflow-y: auto;

    min-height: 400px; /*TODO SHOULD BE REMOVED*/
    border-right: 3px solid black;
    border-left-width: 0;
    -webkit-border-image: -webkit-gradient(linear, 0 0, 100% 0, from(#DCDCDC), to(rgba(0, 0, 0, 0))) 1 100%;
}

.firebase_body {
    top: -12px;
    position: absolute;
    width: 100%;
    height: auto;
    background-color: #FAFAFA;
    min-height: 500px; /*TODO DELETE*/
    z-index: -2;
}

.firebase_dash {
    background-color: #FAFAFA;
    min-height: 800px; /*TODO DELETE*/
    width: 100%;
    z-index: -2;

}

.firebase_dash .overview_bar {
    height: 51px;
    width: 100%;
    background-color: #039BE5;
    z-index: -1;

}

.firebase_left_nav .left_nav_header {
    width: 100%;
    height: 41px;
    background-color: #FAFAFA;
    color: #039BE5;
    border: 1px none #DCDCDC;
    border-bottom-style: solid;
    padding-top: 10px;
    margin-bottom: 12px;
    vertical-align: middle;

    /*border-right: 3px solid black;*/
    /*border-left-width: 0;*/
    /*-webkit-border-image:*/
    /*-webkit-gradient(linear, 0 0, 100% 0, from(#0187c8), to(#039be5)) 1 100%;*/
}

.firebase_left_nav .left_nav_footer {
    width: 100%;
    height: 104px;
    border-top: 1px solid #DCDCDC;
    border-bottom: 1px solid #DCDCDC;
    bottom: 0;

}

.firebase_left_nav .left_nav_footer .spark {
    width: 100%;
    height: 60px;
    border-bottom: 1px solid #DCDCDC;
}

.firebase_left_nav .left_nav_footer .sidebar_collapse {
    width: 100%;
    height: 44px;

    box-shadow: rgba(0, 0, 0, 0.12) 0px -1px 0px;
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: auto;
    position: relative;
    overflow-x: hidden;
    overflow-y: hidden;
    max-height: 256px;
    transform: translate(0px, 0px);
    visibility: visible;
}

.firebase_left_nav .navbar_item {
    height: 36px;
    width: auto;
    background-color: inherit;
    color: inherit;
    padding: 0 24px 0 24px;
    font-size: 14px;
    font-weight: 500;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    vertical-align: middle;

}

.firebase_left_nav .navbar_item span {
    padding-left: 16px;
}

.firebase_left_nav .navbar_item i {
    width: 20px;
    height: 20px;

    font-family: "Material Icons";
    font-size: 20px;
    font-weight: normal;

}

.firebase_left_nav .navbar_item:hover {
    background-color: #EEEEEE;

}

.firebase_left_nav .navbar_label {
    height: 24px;
    width: auto;
    color: #9E9E9E;
    background-color: #FFFFFF;
    padding: 8px 24px 0 24px;
    font-size: 12px;
    text-transform: uppercase;
}

@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: url(../fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
    src: local('Material Icons'),
    local('MaterialIcons-Regular'),
    url(../fonts/MaterialIcons-Regular.woff2) format('woff2'),
    url(../fonts/MaterialIcons-Regular.woff) format('woff'),
    url(../fonts/MaterialIcons-Regular.ttf) format('truetype');

}

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px; /* Preferred icon size */
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;

    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;

    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;

    /* Support for IE. */
    font-feature-settings: 'liga';
}

